# VisionVoyager---DiplomaProject

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mainApplication.cpp
ApplicationModule/: CMakeLists.txt  application.cpp  application.h  application_utils.h
CameraModule/: CMakeLists.txt  cameraModule.cpp  cameraModule.h  cameraModuleUtils.cpp  detectLowerbody.cpp  faceRecognition.cpp  faces_csv.txt  person.h  recognized_persons.txt
HardwareAbstractionLayer/: CMakeLists.txt  HardwareInterfaces.h  RealHardware.h  SimHardware.h
KeyboardControl/: CMakeLists.txt  keyboardControl.cpp  keyboardControl.h
LineFollower/: CMakeLists.txt  lineFollower.cpp  lineFollower.h
ObstacleAvoidance/: CMakeLists.txt  obstacleAvoidanceUtils.cpp  obstacleAvoidanceUtils.h
RouteDatabase/: avoid_obstacle.txt  simple_obstacle_avoidance.txt
RouteDatabase/Section A/: Auditorium.txt  Secretariat.txt
RouteDatabase/Section B/: Secretariat AC.txt  Secretariat ETC.txt
RouteDatabase/Section C/: Abc.txt  Receptie Biblioteca.txt
RouteDatabase/Timestamp_Routes/: .txt  Route_No_4.txt  Route_No_5.txt
RouteRecordPlayer/: CMakeLists.txt  routeRecordPlayUtils.cpp  routeRecordPlayUtils.h
RouteRegistration/: CMakeLists.txt  routeRegistrationUtils.cpp  routeRegistrationUtils.h
TextToSpeach/: CMakeLists.txt  hello_message.txt  mode_options.txt  option1.txt  option2.txt  textToSpeach.cpp  textToSpeach.h
TextToSpeach/EN/: mode_options.txt  option1.txt  option2.txt  repeat_selection.txt
TextToSpeach/RO/: hello_message.txt  option1.txt  option2.txt  repeat_selection.txt
TextToSpeech/: CMakeLists.txt  textToSpeech.cpp  textToSpeech.h
TextToSpeech/EN/: default_guide_mode.txt  hello_message.txt  mode_options.txt  option1.txt  option2.txt  section_A_options.txt  section_B_options.txt  section_C_options.txt
TextToSpeech/RO/: default_guide_mode.txt  hello_message.txt  mode_options.txt  option1.txt  option2.txt  section_A_options.txt  section_B_options.txt  section_C_options.txt
VisionVoyagerGUI/: CMakeLists.txt  adminModeUtils.cpp  adminModeWindow.cpp  adminModeWindow.h  admin_mode_window.cpp  admin_mode_window.h  adminmodewindow.ui  cameraWidget.cpp  cameraWidget.h  camera_widget.cpp  camera_widget.h  fileDropWidget.cpp  fileDropWidget.h  ui_adminmodewindow.h
VisionVoyagerGUI/DataCollection/: RoutesData.xlsx  Spreadsheet.xlsx  dataCollectionUtils.cpp
VisionVoyagerMoves/: CMakeLists.txt  visionVoyager.cpp  visionVoyager.h
VoiceRecognition/: 7863.dic  7863.lm  7863.log_pronounce  7863.sent  7863.vocab  CMakeLists.txt  keyphrases.list  start_keyphrase.list  voiceRecognition.cpp  voiceRecognition.h  wait_keyphrase.list
docs/: Doxyfile
